[package]
name = "codegenrs"
version = "2.0.0"
description = "Moving code-gen our of build.rs"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/codegenrs"
documentation = "https://docs.rs/codegenres"
readme = "README.md"
categories = ["development-tools", "text-processing"]
keywords = ["development", "codegen"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/codegenrs/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["clap"]

[dependencies]
difference = "2.0.0"
clap = { version = "4.0.0", features = ["std", "derive"], optional = true }
normalize-line-endings = "0.3.0"
derive_more = "0.99.2"
